--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,136 @@
-html,
-body {
+/* UTILS */
+
+* {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: var(--font-family);
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+
+body {
+  background-color: var(--color-bg);
 }
 
 a {
-  color: inherit;
+  color: unset;
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+.section__padding {
+  padding: 4rem 6rem;
 }
+
+.section__margin {
+  margin: 4rem 6rem;
+}
+
+/* UTILS END */
+
+/* COLOR */
+
+.gradient__bg {
+  /* MOZ */
+  background: -moz-radial-gradient(
+    circle at 3% 25%,
+    var(--radial-gradient-color1) 0%,
+    var(--radial-gradient-color2) 100%
+  );
+
+  /* SAFARI */
+  background: -webkit-radial-gradient(
+    circle at 3% 25%,
+    var(--radial-gradient-color1) 0%,
+    var(--radial-gradient-color2) 100%
+  );
+
+  /* OPERA */
+  background: -o-radial-gradient(
+    circle at 3% 25%,
+    var(--radial-gradient-color1) 0%,
+    var(--radial-gradient-color2) 100%
+  );
+
+  /* IE */
+  background: -ms-radial-gradient(
+    circle at 3% 25%,
+    var(--radial-gradient-color1) 0%,
+    var(--radial-gradient-color2) 100%
+  );
+
+  /* ALL */
+  background: radial-gradient(
+    circle at 3% 25%,
+    var(--radial-gradient-color1) 0%,
+    var(--radial-gradient-color2) 100%
+  );
+}
+
+.gradient__text {
+  background: var(--gradient-text);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+/* COLOR END */
+
+/* ANIMATION */
+
+.scale-up-center {
+  -webkit-animation: scale-up-center 0.4s
+    cubic-berzier(0.39, 0.575, 0, 565, 1000) both;
+  animation: scale-up-center 0.4s cubic-berzier(0.39, 0.575, 0, 565, 1000) both;
+}
+
+/* ANIMATION END */
+
+/* KEYFRAMES */
+
+@keyframes scale-up-center {
+  0% {
+    -webkit-transform: scale(0.5);
+    transform: scale(0.5);
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+
+@-webkit-keyframes scale-up-center {
+  0% {
+    -webkit-transform: scale(0.5);
+    transform: scale(0.5);
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+
+/* KEYFRAMES END */
+
+/* MEDIA */
+
+@media screen and (max-width: 700px) {
+  .section__padding {
+    padding: 4rem;
+  }
+
+  .section__margin {
+    padding: 4rem;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .section__padding {
+    padding: 4rem 2rem;
+  }
+
+  .section__margin {
+    padding: 4rem 2rem;
+  }
+}
+
+/* MEDIA END */
