add navbar components

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -78,9 +78,9 @@ a {
 /* ANIMATION */
 
 .scale-up-center {
-  -webkit-animation: scale-up-center 0.4s
-    cubic-berzier(0.39, 0.575, 0, 565, 1000) both;
-  animation: scale-up-center 0.4s cubic-berzier(0.39, 0.575, 0, 565, 1000) both;
+  -webkit-animation: scale-up-center 0.2s
+    cubic-bezier(0.391, 0.575, 0.565, 1000) both;
+  animation: scale-up-center 0.2s cubic-bezier(0.391, 0.575, 0.565, 1) both;
 }
 
 /* ANIMATION END */
