add possibility components

--- a/styles/index.css
+++ b/styles/index.css
@@ -19,6 +19,7 @@
   --color-footer: rgba(3, 27, 52, 1);
   --color-blog: rgba(4, 44, 84, 1);
   --color-text: rgba(129, 175, 221, 1);
+  --color-text-light: rgb(177, 233, 255);
   --color-subtext: rgba(255, 138, 241, 1);
 
   --color-white: rgba(255, 255, 255, 1);
